5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1675_2471.log
== TEST (2019-05-02 10:25:47) 
-- CODE:
age= int(input("qual a idade do individuo?"))
imc= float(input("qual o imc do individuo?"))

print("Entradas:", age, "anos e IMC", imc)

if(age<=0 or age>130 or imc<=0):
	print()
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:31:33) 
-- CODE:
age= int(input("qual a idade do individuo?"))
imc= float(input("qual o imc do individuo?"))

print("Entradas:", age, "anos e IMC", imc)

if(age<=0 or age>130 or imc<=0):
	print("Dados invalidos")
elif(age<45 and imc<22.0):
	risco= "Baixo"
elif (age>=45 and imc<22):
	risco="Medio"
elif (age<45 and imc >=22):
	risco= "Medio"
elif(age>=45 and imc>=22):
	risco= "alto"
print("Risco:",risco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print("Risco:",risco)
NameError: name 'risco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:31:43) 
-- CODE:
age= int(input("qual a idade do individuo?"))
imc= float(input("qual o imc do individuo?"))

print("Entradas:", age, "anos e IMC", imc)

if(age<=0 or age>130 or imc<=0):
	print("Dados invalidos")
elif(age<45 and imc<22.0):
	risco= "Baixo"
elif (age>=45 and imc<22):
	risco="Medio"
elif (age<45 and imc >=22):
	risco= "Medio"
elif(age>=45 and imc>=22):
	risco= "alto"
print("Risco:",risco)
-- EXECUTION TIME:
0.124567
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1675/2471/main.py", line 16, in <module>
    print("Risco:",risco)
NameError: name 'risco' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:31:49) 
-- CODE:
age= int(input("qual a idade do individuo?"))
imc= float(input("qual o imc do individuo?"))

print("Entradas:", age, "anos e IMC", imc)

if(age<=0 or age>130 or imc<=0):
	print("Dados invalidos")
elif(age<45 and imc<22.0):
	risco= "Baixo"
elif (age>=45 and imc<22):
	risco="Medio"
elif (age<45 and imc >=22):
	risco= "Medio"
elif(age>=45 and imc>=22):
	risco= "alto"
print("Risco:",risco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print("Risco:",risco)
NameError: name 'risco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:32:12) 
-- CODE:
age= int(input("qual a idade do individuo?"))
imc= float(input("qual o imc do individuo?"))

print("Entradas:", age, "anos e IMC", imc)

if(age<=0 or age>130 or imc<=0):
	print("Dados invalidos")
elif(age<45 and imc<22.0):
	risco= "Baixo"
elif (age>=45 and imc<22):
	risco="Medio"
elif (age<45 and imc >=22):
	risco= "Medio"
elif(age>=45 and imc>=22):
	risco= "Alto"
print("Risco:",risco)
-- EXECUTION TIME:
0.157632
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1675/2471/main.py", line 16, in <module>
    print("Risco:",risco)
NameError: name 'risco' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:32:49) 
-- CODE:
age= int(input("qual a idade do individuo?"))
imc= float(input("qual o imc do individuo?"))

print("Entradas:", age, "anos e IMC", imc)

if(age<=0 or age>130 or imc<=0):
	print("Dados invalidos")
elif(age<45 and imc<22.0):
	risco= "Baixo"
elif (age>=45 and imc<22):
	risco="Medio"
elif (age<45 and imc >=22):
	risco= "Medio"
elif(age>=45 and imc>=22):
	risco= "Alto"
print("Risco:",risco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print("Risco:",risco)
NameError: name 'risco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:34:18) 
-- CODE:
age= int(input("qual a idade do individuo?"))
imc= float(input("qual o imc do individuo?"))

print("Entradas:", age, "anos e IMC", imc)

if(age<=0 or age>130 or imc<=0):
	print("Dados invalidos")
else:
	if(age<45 and imc<22.0):
		risco= "Baixo"
	elif (age>=45 and imc<22):
		risco="Medio"
	elif (age<45 and imc >=22):
		risco= "Medio"
	elif(age>=45 and imc>=22):
		risco= "Alto"
	print("Risco:",risco)
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:34:24) 
-- CODE:
age= int(input("qual a idade do individuo?"))
imc= float(input("qual o imc do individuo?"))

print("Entradas:", age, "anos e IMC", imc)

if(age<=0 or age>130 or imc<=0):
	print("Dados invalidos")
else:
	if(age<45 and imc<22.0):
		risco= "Baixo"
	elif (age>=45 and imc<22):
		risco="Medio"
	elif (age<45 and imc >=22):
		risco= "Medio"
	elif(age>=45 and imc>=22):
		risco= "Alto"
	print("Risco:",risco)
-- EXECUTION TIME:
0.148299
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
